--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="ptbr">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Número Secreto do Santos</title>
+    <title>Número Secreto</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" integrity="sha512-W/zrbCncQnky/EzL+/AYwTtosvrM+YG/V6piQLSe2HuKS6cmbw89kjYkp3tWFn1dkWV7L1ruvJyKbLz73Vlgfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Acerte o Número secreto</h1>
-    <h3>O número secreto está estre <span id="maaior valor"></span></h3>
+    <h1>Acerte o número secreto</h1>
+
+    <h3>O número secreto está entre <span id="menor-valor">0</span> e
+    <span id="maior-valor">100</span></h3>
+
     <div id="chute" class="mensagem">
-        <div>voce disse:</div>
+        <div>Você disse:</div>
         <span class="box">20</span>
-        <div>O número secreto é maior <i class="fa-solid fa-arrow-up"></i> </div>
+        <div>O número secreto é maior <i class="fa-solid fa-up-long" style="color: #ff0000;"></i></div>
+
     </div>
+
+    <script src="app/sortearNumero.js"></script>
+
 </body>
 </html>
