--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <div id="chute" class="mensagem">
         <div>Você disse:</div>
         <span class="box">20</span>
-        <div>O número secreto é maior <i class="fa-solid fa-up-long" style="color: #ff0000;"></i></div>
+        <div>O número secreto é maior <i class="fa-solid fa-up-long" style="color: #9300b0;"></i></div>
 
     </div>
 
     <script src="app/sortearNumero.js"></script>
+    <script src="app/reconhecimentodevoz.js"></script>
 
 </body>
 </html>
